# cpp-hexagonal-microservice

./: .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  LICENSE  QUICKSTART.md  README.md  build.sh  docker-compose.yml  init-mongo.js  start.sh  stop.sh  test-api.sh  vcpkg.json
include/adapters/: HttpServer.h  ProductHandler.h
include/config/: Config.h
include/domain/: Product.h  ProductRepository.h  ProductRepositoryMongo.h
include/dto/: ProductResponse.h
include/service/: ProductService.h
include/utils/: AppError.h  JsonUtils.h  Logger.h
src/: main.cpp
src/adapters/: HttpServer.cpp  ProductHandler.cpp
src/config/: Config.cpp
src/domain/: Product.cpp  ProductRepositoryMongo.cpp
src/service/: ProductService.cpp
src/utils/: JsonUtils.cpp  Logger.cpp
